--- a/stripe_project/.env
+++ b/stripe_project/.env
@@ -1,3 +1,9 @@
 POSTGRES_HOST=db
 POSTGRES_DB=stripedb
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=ghusdfghjdsf234
+POSTGRES_PORT=5432
+DEBUG=False
+DJANGO_SECRET_KEY=django-insecure-pbco8+91^nssfe^ddw=xc#%-y!)u1@w&&b$g1r#6viu=)nh+y3
+STRIPE_PUBLIC_KEY='ENTER YOUR STRIPE PUBLIC KEY HERE'
+STRIPE_SECRET_KEY='ENTER YOUR STRIPE SECRET KEY HERE'
