--- a/stripe_project/docker-compose.yml
+++ b/stripe_project/docker-compose.yml
@@ -9,15 +9,15 @@ services:
     volumes:
       - .:/stripe_project
     environment:
-      - SECRET_KEY=django-insecure-pbco8+91^nssfe^ddw=xc#%-y!)u1@w&&b$g1r#6viu=)nh+y3
-      - DEBUG=False
+      - SECRET_KEY=${DJANGO_SECRET_KEY}
+      - DEBUG=${DEBUG}
       - POSTGRES_DB_NAME=${POSTGRES_DB}
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_PORT=5432
-      - STRIPE_PUBLIC_KEY=pk_test_51M7GxwICkydFAOAD1hI570eBxaDChoc1GwefBGEYrxdVrCZiuCkMJ6EvcSpSyMNRIJQVYlXCkBjwZZF11WviZjLt00zFVoZ6gR
-      - STRIPE_SECRET_KEY=sk_test_51M7GxwICkydFAOADxW2iWF6XCs1Kz84jg5R9EQcod8bISUZCUgttcOEjXftOZCbCCqmeqEZzEE7LqHxGACjxwpuL00J8rYgwsY
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - STRIPE_PUBLIC_KEY=${STRIPE_PUBLIC_KEY}
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
     ports:
       - 8000:8000
     depends_on:
@@ -30,8 +30,6 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.db
-    # volumes:
-    #   - /postgres_data:/var/lib/postgresql/data/
     ports: 
       - 8080:8080
     environment:
