--- a/stripe_project/docker-compose.yml
+++ b/stripe_project/docker-compose.yml
@@ -6,8 +6,8 @@ services:
             python /stripe_project/manage.py migrate
             && python /stripe_project/data_example.py
             && python /stripe_project/manage.py runserver 0.0.0.0:8000" 
-    volumes:
-      - .:/stripe_project
+    # volumes:
+    #   - .:/stripe_project
     environment:
       - SECRET_KEY=${DJANGO_SECRET_KEY}
       - DEBUG=${DEBUG}
